feat(ui): Implement compact mode for card labels
- Replace `java.awt.Color` with a custom domain `Color` model across the project for better cross-platform compatibility
- Introduce `ColorUtil` in the shared module to handle color brightness and calculate accessible foreground colors
- Android: Implement compact mode in `BoardScreen`, rendering labels as thin color bars when enabled
- Android: Provide `ColorUtil` via `CompositionLocalProvider` and update chips to use contrast-aware text colors
- JavaFX: Implement compact mode in `CardPreviewView` and introduce `LabelView` for consistent label rendering
- JavaFX: Update `CardPreviewCellFactory` and `LabelTagViewFactory` to support the new label styling
- Shared: Fix `PreferencesKeyValueStore` to correctly emit updates for all preference changes

Co-authored-by: Gemini 3 Flash Preview
Signed-off-by: Stefan Niedermann <info@niedermann.it>